--- a/quiz/index.html
+++ b/quiz/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Quizzes - The Critical Thinking Papers</title>
+<title>Quizzes - The Critical Thinker's Paper</title>
 <link href="../css/all.css" media="all" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <h1>
 <span class="the">The</span> 
 <span class="critical">Critical</span> 
-<span class="thinking">Thinking</span> 
-<span class="papers">Papers</span>
+<span class="thinkers">Thinker's</span> 
+<span class="paper">Paper</span>
 </h1>
 
 <div class="menu">Sections: <a href="../">Front</a> | <a href="../essay/">Essays</a> | <span class="current">Quizzes</span></div>
@@ -24,13 +24,13 @@
 </ul>
 
 <div class="social">
-<a href="https://twitter.com/share" class="twitter-share-button" data-url="https://criticalthinking.herokuapp.com/quiz" data-text="Quizzes!" data-related="ThoughtCritic" data-hashtags="CriticalThinking" data-dnt="true">Tweet</a>
-<div class="g-plusone" data-size="medium" data-href="https://criticalthinking.herokuapp.com/quiz"></div>
-<div class="fb-like" data-href="https://criticalthinking.herokuapp.com/quiz" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="https://criticalthinkers.github.io/quiz" data-text="Quizzes!" data-related="ThoughtCritic" data-hashtags="CriticalThinking" data-dnt="true">Tweet</a>
+<div class="g-plusone" data-size="medium" data-href="https://criticalthinkers.github.io/quiz"></div>
+<div class="fb-like" data-href="https://criticalthinkers.github.io/quiz" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
 </div>
 
 <p class="info">
-Copyright (c) 2013 CTP.  Site design and content by CTP.  All content provided under the <a href="https://raw.github.com/ccttpp/ctp/master/LICENSE">MIT license</a>.
+Copyright (c) 2014 The Critical Thinker's Paper.<br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 </p>
 
 <div id="fb-root"></div>
