Rename repo from ctp to criticalthinkers, add CC metadata tags.

--- a/quiz/user.html
+++ b/quiz/user.html
@@ -17,7 +17,7 @@
 
 <h2>&nbsp;</h2>
 
-<div class="date">Added on 2012/03/26 (<a href="https://github.com/criticalthinkers/ctp/commits/master/./quiz/20120326-user">edit log available</a>)</div>
+<div class="date">Added on 2012/03/26 (<a href="https://github.com/criticalthinkers/criticalthinkers/commits/master/./quiz/20120326-user">edit log available</a>)</div>
 
 <div class="quiz">
     <h2>Rewrite without gender:</h2>
@@ -34,7 +34,7 @@
 </div>
 
 <p class="info">
-Copyright (c) 2014 The Critical Thinker's Paper.<br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+Copyright (c) 2013-2014 The Critical Thinker's Paper.<br />This <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" rel="dct:type">work</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://criticalthinkers.github.io/quiz/user.html" property="cc:attributionName" rel="cc:attributionURL">The Critical Thinker's Paper</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 </p>
 
 <div id="fb-root"></div>
