--- a/essay/the-why-game.html
+++ b/essay/the-why-game.html
@@ -17,7 +17,7 @@
 
 <h2>The "Why?" Game</h2>
 
-<div class="date">Written on 2014/7/31 (<a href="https://github.com/criticalthinkers/criticalthinkers/commits/master/./essay/20141116-the-why-game">edit log available</a>)</div>
+<div class="date">Written on 2014/7/31 (<a target="_blank" href="https://github.com/criticalthinkers/criticalthinkers/commits/master/./essay/20141116-the-why-game">edit log available</a>)</div>
 
 <div class="context">Context: Our digital lives make us not only less connected but also less self-aware</div>
 
@@ -32,7 +32,7 @@
 <div class="tags">Tags: why game, power, superiority, inferiority, animals, humans, consiousness, questioning, euthanasia</div>
 
 <p class="info">
-Copyright (c) 2013-2014 The Critical Thinker's Paper.<br /><i xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">The "Why?" Game</i> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://criticalthinkers.github.io/essay/the-why-game.html" property="cc:attributionName" rel="cc:attributionURL">The Critical Thinker's Paper</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+Copyright (c) 2013-2014 The Critical Thinker's Paper.<br /><i xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">The "Why?" Game</i> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://criticalthinkers.github.io/essay/the-why-game.html" property="cc:attributionName" rel="cc:attributionURL">The Critical Thinker's Paper</a> is licensed under a <a target="_blank" rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 </p>
 
 <div id="fb-root"></div>
