--- a/essay/greater-responsibility.html
+++ b/essay/greater-responsibility.html
@@ -32,7 +32,7 @@
 <div class="tags">Tags: responsibility, personal growth, bankruptcy, privacy, ethics, trust, involvement, research, journey, learning, meat, animals, humans, sustainability, manufacturing, governments, corporations, measuring, food, transparency, accountability, relationships, opportunity</div>
 
 <p class="info">
-Copyright (c) 2013-2014 The Critical Thinker's Paper.<br /><i xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">A Greater Responsibility</i> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://criticalthinkers.github.io/essay/greater-responsibility.html" property="cc:attributionName" rel="cc:attributionURL">The Critical Thinker's Paper</a> is licensed under a <a target="_blank" rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+Copyright (c) 2013 The Critical Thinker's Paper.<br /><i xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">A Greater Responsibility</i> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://criticalthinkers.github.io/essay/greater-responsibility.html" property="cc:attributionName" rel="cc:attributionURL">The Critical Thinker's Paper</a> is licensed under a <a target="_blank" rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 </p>
 
 <div id="fb-root"></div>
