Open links to external sites in new window

--- a/quiz/doctor.html
+++ b/quiz/doctor.html
@@ -17,7 +17,7 @@
 
 <h2>&nbsp;</h2>
 
-<div class="date">Added on 2013/06/01 (<a href="https://github.com/criticalthinkers/criticalthinkers/commits/master/./quiz/20130601-doctor">edit log available</a>)</div>
+<div class="date">Added on 2013/06/01 (<a target="_blank" href="https://github.com/criticalthinkers/criticalthinkers/commits/master/./quiz/20130601-doctor">edit log available</a>)</div>
 
 <div class="quiz">
     <h2>Rewrite without gender:</h2>
