--- a/quiz/user.html
+++ b/quiz/user.html
@@ -17,7 +17,7 @@
 
 <h2>&nbsp;</h2>
 
-<div class="date">Added on 2012/03/26 (<a href="https://github.com/criticalthinkers/criticalthinkers/commits/master/./quiz/20120326-user">edit log available</a>)</div>
+<div class="date">Added on 2012/03/26 (<a target="_blank" href="https://github.com/criticalthinkers/criticalthinkers/commits/master/./quiz/20120326-user">edit log available</a>)</div>
 
 <div class="quiz">
     <h2>Rewrite without gender:</h2>
