Mention MIT License for all website code

--- a/essay/ask-why.html
+++ b/essay/ask-why.html
@@ -32,7 +32,7 @@
 <div class="tags">Tags: why, daily routine, make a vow, wake up, asking questions, humanity, hope, role models, society, participation, loopholes, laws, habits, adults, reasons,research, think for yourself, truth, seeking,  behavior, critical, compassion, tolerance, justice, taking action</div>
 
 <p class="info">
-Copyright (c) 2013 The Critical Thinker's Paper.<br /><i xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Keep asking "why?"</i> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://criticalthinkers.github.io/essay/ask-why.html" property="cc:attributionName" rel="cc:attributionURL">The Critical Thinker's Paper</a> is licensed under a <a target="_blank" rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+Copyright (c) 2013 The Critical Thinker's Paper.<br /><i xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Keep asking "why?"</i> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://criticalthinkers.github.io/essay/ask-why.html" property="cc:attributionName" rel="cc:attributionURL">The Critical Thinker's Paper</a> is licensed under a <a target="_blank" rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.<br />All website code provided under the <a target="_blank" href="https://raw.github.com/criticalthinkers/criticalthinkers/master/LICENSE">MIT license</a>.
 </p>
 
 <div id="fb-root"></div>
