--- a/essay/index.html
+++ b/essay/index.html
@@ -18,6 +18,7 @@
 <h2>Essays</h2>
 
 <ul>
+<li><a href="privilege-of-speech.html">2015/01/10: Privilege of Speech</a></li>
 <li><a href="the-why-game.html">2014/07/31: The "Why?" Game</a></li>
 <li><a href="greater-responsibility.html">2013/11/10: A Greater Responsibility</a></li>
 <li><a href="ask-why.html">2013/06/15: Keep asking "why?"</a></li>
@@ -31,7 +32,7 @@
 </div>
 
 <p class="info">
-Copyright (c) 2013-2014 The Critical Thinker's Paper.<br />All <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" rel="dct:type">works</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://criticalthinkers.github.io/essay" property="cc:attributionName" rel="cc:attributionURL">The Critical Thinker's Paper</a> are licensed under a <a target="_blank" rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.<br />All website code provided under the <a target="_blank" href="https://raw.github.com/criticalthinkers/criticalthinkers/master/LICENSE">MIT license</a>.
+Copyright (c) 2013-2015 The Critical Thinker's Paper.<br />All <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" rel="dct:type">works</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://criticalthinkers.github.io/essay" property="cc:attributionName" rel="cc:attributionURL">The Critical Thinker's Paper</a> are licensed under a <a target="_blank" rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.<br />All website code provided under the <a target="_blank" href="https://raw.github.com/criticalthinkers/criticalthinkers/master/LICENSE">MIT license</a>.
 </p>
 
 <div id="fb-root"></div>
